--- a/index.html
+++ b/index.html
@@ -8,17 +8,16 @@
 </head>
 <body>
   <main id="slides" role="main">
-    <!-- Slide 1 -->
+   
     <section class="slide" id="slide-1" data-color="#0F4934" aria-label="Diapositiva 1">
       <div class="inner">
-        <h1 class="main-title">LOS HIJOS<br><span class="accent">DEL</span><br>HUITO</h1>
+        <h1 class="main-title">LOS HIJOS <span class="main-title">DEL</span></span><br>HUITO</h1>
         <div class="controls">
           <button id="startBtn" class="btn" aria-label="Empezar la historia">Empezar</button>
         </div>
       </div>
     </section>
 
-    <!-- Slide 2 -->
     <section class="slide" id="slide-2" data-color="#0F4934" aria-label="Diapositiva 2">
       <div class="inner content-block">
         <h2>En el medio del Amazonas viven los Andoke.</h2>
@@ -28,7 +27,6 @@
       </div>
     </section>
 
-    <!-- Slide 3 (Huito, línea) -->
     <section class="slide" id="slide-3" data-color="#0F4934" aria-label="Diapositiva 3">
       <!-- Huito lineal flotante (trazo) -->
       <button class="graphic-line float-top-right" data-role="huito" aria-label="Huito interactivo" tabindex="0">
@@ -52,7 +50,6 @@
       </div>
     </section>
 
-    <!-- Slide 4 (Maloca, línea) -->
     <section class="slide" id="slide-4" data-color="#8B4F32" aria-label="Diapositiva 4">
       <button class="graphic-line float-left" data-role="maloca" aria-label="Maloca interactiva" tabindex="0">
         <svg viewBox="0 0 220 120" width="220" height="120" aria-hidden="true" focusable="false" role="img">
@@ -73,7 +70,6 @@
       </div>
     </section>
 
-    <!-- Slide 5 (Maloca centro, texto) -->
     <section class="slide" id="slide-5" data-color="#8B4F32" aria-label="Diapositiva 5">
       <div class="inner content-block">
         <h2>La maloca era el centro del mundo:</h2>
@@ -83,7 +79,6 @@
       </div>
     </section>
 
-    <!-- Slide 6 (Río, línea) -->
     <section class="slide" id="slide-6" data-color="#4C8CA8" aria-label="Diapositiva 6">
       <button class="graphic-line float-bottom-right" data-role="rio" aria-label="Río interactivo" tabindex="0">
         <svg viewBox="0 0 600 120" width="360" height="120" aria-hidden="true" focusable="false" role="img">
@@ -100,7 +95,6 @@
       </div>
     </section>
 
-    <!-- Slide 7 -->
     <section class="slide" id="slide-7" data-color="#4C8CA8" aria-label="Diapositiva 7">
       <div class="inner content-block">
         <h2>“Ahora nuestro trabajo es otro”.</h2>
@@ -110,8 +104,7 @@
       </div>
     </section>
 
-    <!-- Slide 8 (Árbol, línea) -->
-    <section class="slide" id="slide-8" data-color="#BEE2C8" aria-label="Diapositiva 8">
+    <section class="slide" id="slide-8" data-color="#466f53" aria-label="Diapositiva 8">
       <button class="graphic-line float-top-left" data-role="arbol" aria-label="Árbol interactivo" tabindex="0">
         <svg viewBox="0 0 140 180" width="160" height="200" aria-hidden="true" focusable="false" role="img">
           <!-- copa - lineas -->
@@ -129,7 +122,6 @@
       </div>
     </section>
 
-    <!-- Slide 9 — Credits -->
     <section class="slide" id="slide-9" data-color="#0F4934" aria-label="Diapositiva 9">
       <div class="inner content-block credits">
         <h2>Créditos y fuentes</h2>
@@ -138,7 +130,7 @@
         </p>
         <div class="controls">
           <button id="backTop" class="btn link">Volver al inicio</button>
-          <a class="btn link" href="/mnt/data/Group Project (1).pdf" target="_blank" rel="noreferrer">Ver PDF de referencia</a>
+          <a class="btn link" href="./Transcripción.docx.pdf" target="_blank" rel="noreferrer">Ver bibliografía</a>
         </div>
       </div>
     </section>
